equals comparison added